# barevisor

./: README.md
docs/superpowers/plans/: 2026-06-14-intel-devirtualize.md
docs/superpowers/specs/: 2026-06-13-ept-hook2-design.md  2026-06-14-intel-devirtualize-design.md
src/: uefi.code-workspace  windows.code-workspace
src/hvcore/: Cargo.toml  README.md
src/hvcore/.cargo/: config.toml
src/hvcore/src/: lib.rs
src/hvcore/src/hypervisor/: allocator.rs  debug_out.rs  host.rs  hypercall.rs  interrupt_handlers.rs  mod.rs  panic.rs  platform_ops.rs  registers.rs  restore_registers.S  restore_registers.inc  serial_logger.rs  x86_instructions.rs
src/hvcore/src/hypervisor/amd/: guest.rs  svm.rs
src/hvcore/src/hypervisor/intel/: devirt.rs  ept_hide.rs  ept_hook.rs  epts.rs  guest.rs  mod.rs  mtrr.rs  run_guest.S  vmx.rs
src/uefi/check_hv_vendor/: Cargo.toml
src/uefi/uefi_hv/: Cargo.toml
src/uefi/uefi_hv/src/: main.rs  ops.rs
src/uefi/xtask/src/vmtest/: vmware.rs
src/windows/: Cargo.toml  Makefile.toml  asio3_ioctl_report.md  driver-signature-detection-and-camouflage.md  iomap64_report.md  report copy 2.md  report copy 3.md  report.md  vmx64_report.md
src/windows/asuscert_bypass/: Cargo.toml
src/windows/asuscert_bypass/src/: main.rs
src/windows/hook_example/: Cargo.toml
src/windows/hook_example/src/: main.rs
src/windows/kernel_ssdt/: Cargo.toml
src/windows/kernel_ssdt/src/: lib.rs
src/windows/kernel_stealth/: Cargo.toml
src/windows/kernel_stealth/src/: lib.rs  log.rs
src/windows/kernel_trace/: Cargo.toml
src/windows/kernel_trace/src/: lib.rs
src/windows/shared-contract/: Cargo.toml
src/windows/shared-contract/src/: lib.rs
src/windows/ssdt_hook/: Cargo.toml
src/windows/ssdt_hook/src/: device.rs  eprintln.rs  hook_state.rs  lib.rs  ssdt.rs
src/windows/win_hv/: Cargo.toml
src/windows/win_hv/src/: device.rs  eprintln.rs  ept_hook.rs  hook_log.rs  lib.rs  logger.rs  ops.rs  paging.rs  process.rs  ssdt.rs  stealth.rs  trace.rs  x86_insn.rs
src/windows/win_hv_client/: Cargo.toml
src/windows/win_hv_client/src/: asio3.rs  iomap64.rs  main.rs
