[package]
name = "win_hv_client"
description = "User-mode IOCTL client for win_hv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "win_hv_client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4.3"
shared-contract = { path = "../shared-contract" }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
] }
